--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ nav {
   height: 50px;
   align-items: center;
   font-weight: bold;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: 999;
 }
 
 .brand {
@@ -118,6 +123,7 @@ nav ul li a:hover {
   padding: 0 20px;
   box-sizing: border-box;
   flex-direction: column;
+  margin-top: 50px;
 }
 
 /* Container satu */
@@ -189,6 +195,45 @@ div.paragraph p:nth-child(1) {
 
 div.paragraph p:nth-child(2) {
   flex: 1;
+}
+
+/* Pilihan Warna */
+.background {
+  margin: 50px auto;
+  width: 300px;
+  height: 80px;
+  border: solid 3px black;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.pilihan-warna {
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+}
+
+div.warna {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.merah {
+  background-color: red;
+}
+
+.kuning {
+  background-color: yellow;
+}
+
+.hijau {
+  background-color: green;
+}
+
+.abu-abu {
+  background-color: grey;
 }
 /* Responsive Navbar */
 
