--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: antiquewhite;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   overflow-x: hidden;
-  padding-bottom: 1000px;
+  /* padding-bottom: 1000px; */
 }
 
 nav {
@@ -175,8 +175,11 @@ nav ul li a:hover {
   flex-direction: column;
   align-items: center;
 }
-.body .container-dua h3 {
+.container-dua h3 {
   /* justify-content: center; */
+  font-size: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
 }
 div.paragraph {
   display: flex;
@@ -234,6 +237,48 @@ div.warna {
 
 .abu-abu {
   background-color: grey;
+}
+
+/* Project */
+
+.container-tiga {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  display: flex;
+  /* justify-content: center; */
+  flex-direction: column;
+}
+.container-tiga h2 {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.project {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.thumbnail {
+  width: 200px;
+  margin: 5px;
+}
+
+.thumbnail img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+marquee {
+  height: 30px;
+  font-weight: bold;
+  line-height: 30px;
+  background-color: rgb(0, 191, 255);
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 /* Responsive Navbar */
 
