--- a/style.css
+++ b/style.css
@@ -146,6 +146,12 @@ nav ul li a:hover {
   background-size: cover;
   background-position-x: -30px;
   margin-top: 20px;
+  filter: blur(6px);
+  transition: 1s;
+}
+
+.body .container-satu .profile:hover {
+  filter: blur(0);
 }
 
 .body .container-satu h1 {
