--- a/style.css
+++ b/style.css
@@ -276,6 +276,57 @@ div.warna {
   border-radius: 10px;
 }
 
+/* Form */
+
+.form {
+  margin: 0 auto 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.form h2 {
+  text-align: center;
+}
+
+.form form div {
+  margin: 10px;
+}
+
+div input {
+  width: 450px;
+  height: 40px;
+  border-radius: 10px;
+}
+
+div input#comment {
+  height: 100px;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+}
+
+.button button {
+  margin-top: 10px;
+  height: 35px;
+  width: 180px;
+  border-radius: 5px;
+  background-color: lightskyblue;
+  font-weight: bold;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+  transition: all 1s;
+  box-shadow: 20px, 20px, black;
+}
+
+.button button:hover {
+  border: solid 3px rgb(217, 249, 253);
+  background-color: rgb(0, 156, 253);
+}
+/* Akhir Form */
+
 marquee {
   height: 30px;
   font-weight: bold;
@@ -333,11 +384,11 @@ marquee {
     background-color: rgb(32, 171, 252);
     z-index: 2;
     transition: all 1s;
-    transform: translateY(-100%);
+    transform: translateX(100%);
   }
 
   nav ul.slide {
-    transform: translateY(0);
+    transform: translateX(0);
   }
 
   .menu-toggle {
@@ -361,7 +412,7 @@ marquee {
     font-weight: bold;
     position: absolute;
     top: 220px;
-    right: 170px;
+    right: 150px;
   }
 
   .body .container-satu .title {
@@ -372,7 +423,7 @@ marquee {
     font-weight: bold;
     position: absolute;
     top: 255px;
-    right: 140px;
+    right: 125px;
   }
 
   .paragraph {
